--- a/LukeThesis.sty
+++ b/LukeThesis.sty
@@ -96,7 +96,6 @@
       \LARGE\sf\thesisauthor\\*[2.5cm]
       \includegraphics[scale=2]{figures/DTU-logo} \\*[1cm]
       \small\sf Kongens Lyngby \thesisyear\\
-      \small\sf IMM-\thesisdegree-\thesisyear-\thesisnumber
    \end{center}
    \vspace*{\fill}
    \newpage                                            %Back of front page
@@ -105,13 +104,12 @@
    {\sf Technical University of Denmark}\\
    {\sf Department of Applied Mathematics and Computer Science}\\
    {\sf Matematiktorvet, building 303B,}\\ 
-   {\sf 2800 Kongens Lyngby, Denmark}\\
+   {\sf DK-2800 Kgs. Lyngby, Denmark}\\
    {\sf Phone +45 4525 3351}\\
    {\sf compute@compute.dtu.dk}\\
    {\sf www.compute.dtu.dk}
    \vspace*{2.5cm}
    \def\empty{}
-   {\sf IMM-\thesisdegree-\thesisyear-\thesisnumber}
 }
 %
 %==================================================================================================
