--- a/Acknowledgements.tex
+++ b/Acknowledgements.tex
@@ -1,4 +1,4 @@
 \chapter{Acknowledgements}
 
-I would like to thank my supervisor Inge Li Gørtz, and her Ph.D. student Philip Bille for the help they provided to my project. Also I would like to thank my company Infomedia, for letting me do my project with them, my project leader Klaus Wenzel Jørgensen and Rene Madsen.
+I would like to thank my supervisors from DTU, Inge Li Gørtz and Philip Bille, for the help they provided to my project. Also I would like to thank my company Infomedia, for letting me do my project with them, my project leader Klaus Wenzel Jørgensen and Rene Madsen.
 
