Added more text to the document
Included a new chapter, and added more to chapter 1 and preface.

--- a/Appendix1.tex
+++ b/Appendix1.tex
@@ -1,3 +1,8 @@
 \chapter{Appendix}
 
 This appendix is full of stuff ...
+
+Document from Infomedia about the general Vector Spaced Search.\\
+Thesis document from Inge\\
+Links to Wikipedia\\
+The algorithm course book..
