--- a/Preface.tex
+++ b/Preface.tex
@@ -1,7 +1,8 @@
 \chapter{Preface}
 
 This thesis was prepared at the department of Informatics and Mathematical Modelling at the Technical University of Denmark in fulfilment of the
-requirements for acquiring an B.Eng. in Informatics.
+requirements for acquiring an B.Eng. in Informatics. \\
+The project is equal to 20 ECTS points.
 
 The thesis deals with ...
 
