--- a/Thesis.tex
+++ b/Thesis.tex
@@ -81,6 +81,7 @@
 % Main content
 %-------------
 \mainmatter
+\include{ChapterIntroduction}						%Chapter Introduction
 \include{Chapter1}                                  %Chapter 1
 %\include{Chapter2}                                 %Chapter 2
 \appendix
