--- a/Chapter1.tex
+++ b/Chapter1.tex
@@ -1,21 +1,41 @@
-\chapter{Introduction}
+\chapter{Algorithms in General}
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin metus nunc, viverra ac, gravida 
-posuere, lobortis id, felis. Duis magna tortor, interdum porta, dignissim et, sollicitudin vitae, 
-neque. Quisque placerat leo sit amet est. Donec sagittis metus in purus. Duis vehicula arcu in 
-nisi. Suspendisse laoreet. Vivamus suscipit dui ullamcorper turpis. Fusce in neque. Duis malesuada 
-dolor eu orci. Sed ornare, sem in consequat accumsan, tellus ligula ultrices purus, at feugiat 
-lectus risus vel libero. Etiam lobortis. Proin adipiscing dolor in elit. Nam velit felis, 
-adipiscing in, volutpat nec, fermentum a, massa. Praesent felis tortor, cursus nec, convallis ac, 
-ornare vel, augue. Donec lacus neque, volutpat nec, ullamcorper quis, porta id, erat.
+Considerations regarding pick of algorithms. 
 
-Nulla molestie magna ut nulla. Sed pulvinar. Ut tincidunt laoreet odio. In nibh. Morbi ornare laoreet diam. Ut accumsan, mi eget scelerisque sollicitudin, urna nisi rutrum velit, et iaculis orci velit id lorem. Maecenas urna velit, egestas eget, scelerisque sed, dapibus eget, risus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Praesent tincidunt, nisl quis sollicitudin congue, justo erat tempor pede, sit amet eleifend diam massa vel diam. Nullam ornare volutpat urna. Morbi condimentum. Etiam scelerisque purus sit amet nulla. Vivamus luctus metus sit amet enim. Proin tincidunt enim non eros. Donec aliquet adipiscing risus. Suspendisse justo libero, consectetur sed, dictum id, viverra vel, pede. Aenean pretium nulla eget est. In sed nunc. Sed semper dui eu eros.
+\textbf{Bag of Words (Cosine)}, generates a vector from each document.
+Another document can then be matched with the list of documents, and their vectors are compared based on the dot product. The closer the dot product are to the value 1.0 the more similar are two documents. A score of 0.0 indicates that two words has nothing in common.
 
-Integer mi. Vestibulum nec ipsum. Duis a mi vitae lacus elementum tempor. Vestibulum blandit sollicitudin erat. Quisque nec libero vitae turpis luctus cursus. In at diam. Morbi et massa. Mauris a erat. Cras blandit. Nullam nisi. Praesent gravida blandit arcu. Vivamus ornare, quam at pharetra placerat, libero augue laoreet purus, vel fringilla felis lacus consequat velit. Pellentesque malesuada. Ut velit tellus, ullamcorper in, scelerisque et, consectetur et, ipsum. Nulla elit. Proin tempor. Vivamus dapibus nisl lacinia tellus mollis venenatis. Aliquam porttitor ligula ac dolor.
+\textbf{Problem:} This string comparison is very sensitive to short articles, for instance "A man walks his dog in the park" and "A dog walks his man in the park" would result in returning a cosine value of 1.0, due to the term vector. This problem is very unlikely to yield false positives.
 
-Aenean placerat mi eget odio. Etiam malesuada. Nam id neque. Vestibulum et nisi. Vestibulum sem enim, porttitor a, mollis quis, molestie eget, leo. Pellentesque vitae sapien in magna mollis fermentum. In eu tortor. In hac habitasse platea dictumst. Vivamus magna lacus, malesuada et, egestas eget, rhoncus et, massa. Nullam pellentesque massa. Proin non lorem eget lorem mollis volutpat. Integer pulvinar. Nulla facilisi. Cras quam.
+\textbf{Longest Common Substring (LCS)}, compares documents in pairs. A general implementation would be to have list of documents and then compare a document to each of the documents in the list. The algorithm will then return the length of the longest common substring. This would probably needed to be modified to return a percentage match in stead (total string length / longest common substring found).
 
-Integer tristique eros in nulla. Vestibulum massa neque, venenatis at, consequat sed, volutpat in, 
-sem. Duis faucibus lorem vitae purus. Phasellus justo nunc, iaculis non, varius vel, pharetra a, 
-neque. Nulla bibendum scelerisque lorem. Pellentesque viverra. Proin eu arcu. Mauris vitae massa. 
-Phasellus dictum enim tempus lectus. Quisque interdum. 	
+\textbf{Problem:} This algorithm is very prone to fail in cases where there have been made alterations to the article in question. A word change in the middle of one of two otherwise identical articles will result in a ~50 percent match. If the article in question have been obfuscated with many changed words, the LCS will be extremely short. This is a high risk problem, as article duplication will often involve changing words.
+
+
+\section{Optimizing Performance}
+\subsection{Stop Words}
+Stop word removal would improve running time (performance) of both algorithms, and would pose little threat of causing either algorithm to fail. The exception to this could be very short articles (like breaking news articles), that only contains common words, like "Man walks away". Depending on the stop word list, this article could end up being \textit{null}.
+We can safely (with respects to the previously addressed problem) remove stop words, as they don't provide any \textit{semantic} value to the text.
+
+\subsubsection{Cosine}
+For the cosine algorithm removal of stop words would improve performance, by reducing the size of the \textit{Magnitude Vector}. 
+
+\subsubsection{LCS}
+In regards to the LCS algorithm, the performance would also be improved, as the algorithm wouldn't need to traverse as many \textit{terms}. This would reduce the length of the longest common substring, but it would be unlikely that it would affect the outcome of the algorithm.
+
+\subsection{Stemming}
+\textit{Stemming} would can improve performance of the cosine algorithm. This would not affect accuracy as stemming does not ruin the semantic content.
+
+\subsubsection{Cosine}
+Stemming improves the performance of the cosine algorithm as this will reduce the number of words in the \textit{vector space}. As words would be reduced to their base form (Danish:\textit{Grundform}), words used several times, but with different endings would be counted as the same word. When using weighed evaluation this would actually improve performance.
+
+\subsubsection{LCS}
+Stemmning would not improve the performance of the LCS algorithm. As this algorithm matches terms one by one, it would make no difference if the words are stemmed or not. For LCS it would actually decrease performance to apply stemming, as this operation would consume time while preparing the files, with no impact of the algorithms actual performance.
+
+\section{Implementation of Stop Words and Stemming}
+For the algorithms tested removing stop words would be an improvement (\textbf{TEST!!!}), and would be valuable to do before using either algorithm.
+
+Stemming would should not be done when using the LCS algorithm as that has no performance enhancing impact on the LCS.
+
+
+
