--- a/Appendix1.tex
+++ b/Appendix1.tex
@@ -1,6 +1,6 @@
 \chapter{Appendix}
 
-This appendix is full of stuff ...
+This appendix is full of stuff ... add more refs..
 
 Document from Infomedia about the general Vector Spaced Search.\\
 Thesis document from Inge\\
