--- a/ChapterIntroduction.tex
+++ b/ChapterIntroduction.tex
@@ -1,6 +1,13 @@
 \chapter{Introduction}
+I have been working for Infomedia\footnote{www.infomedia.dk} since my third semester as an IT student at DTU (march 2012). Infomedia is in short a company that deals with news monitoring.
 
-blah blah blah stuff about Infomedia...
+Infomedia is the result of a fusion between Berlings Avisdata and Polinfo in 2002, which means that Infomedia is partly owned by JP/Politikens Hus\footnote{www.jppol.dk} and Berlingske Media\footnote{www.berlingskemedia.dk}. It is a company with around 130 employees, of which a fair amount is student aides like myself. Infomedia has various departments, which includes an economy, sales, analysis and an IT department amongst others.\\
+I am employed in the IT department as a student programmer.
 
+Infomedia deals with news monitoring, which means that we have an inflow of articles from various newspapers, news sites, television and radio media, which we then monitor for content that is of interest to our clients. This can be a client that wishes to know when their firm is mentioned in the press or a product they are using, if that is being mentioned. We have also begun monitoring social media. Infomedia then sells various solutions to clients, for them to get this news monitoring.
 
-blah blah blah general stuff (what is a "term" "article" "vector" and so on...)
+One of the things that we try to do in Infomedia, is that we want to present our clients with a fast overview of the articles in which terms\footnote{A term is, in short, a word or a combination of words.}, that trigger our news monitoring, appear. Many local newspapers are today owned by bigger media houses (like the owners of Infomedia) and as such, they will feature a lot of the articles that have also been printed in the "mother paper". This will make the same (or roughly the same\footnote{Articles can be slightly edited in order to make them fit into the layout of the various papers.}) article appear many times in news monitoring. In an effort to make the list of articles presented to the clients, easy to look at, and preventing a client having to read the "same" article many times, Infomedia has a wish to cluster article duplicates. Infomedia can then present the client with a list of articles and in that list have further sub lists that contains duplicates of the original aritcle\footnote{Or the longest article rather, as this will tend to contain the most information.}.
+
+Another issue, is the issue of copyrights and when the same article will appear in different media, but without content given from the writer of that article. An example that is often happening is that news telegrams from Reuters\footnote{www.reuters.com} or Ritzau\footnote{www.ritzau.dk} is published in a newspaper, but without the source indication. All news media are of course interested in knowing when their material is being published in competing media. This how ever can be tricky business, as official rules on the matter is incredible fuzzy.
+
+I will in this thesis try and look into various ways of identifying article duplicates with in a test corpus\footnote{A days worth of articles from 10/31/2013 - totalling 22.787 articles.} of articles. The long term goal for Infomedia is having this being implemented in the inflow of articles, and having a look back functionality so that we can group duplicates not just for one day, but for a longer period of time. 
