--- a/Preface.tex
+++ b/Preface.tex
@@ -4,7 +4,7 @@ This thesis was prepared at the department of Informatics and Mathematical Model
 requirements for acquiring an B.Eng. in Informatics. \\
 The project is equal to 20 ECTS points.
 
-The thesis deals with ...
+The thesis deals with the issue of finding articles that are duplicates in a large corpus of articles. This is done using various algorithms and is implemented in C\#.
 
 The thesis consists of ...
 %==================================================================================================
