--- a/Thesis.tex
+++ b/Thesis.tex
@@ -29,7 +29,7 @@
 % THESIS PROPERTIES (Modifiy these fields with your details)
 %==================================================================================================
 \def\thesisauthor{Brian Lynnerup Pedersen}          %Author
-\def\thesistitle{Duplicate Article Matching}        %Title
+\def\thesistitle{Article Duplicates}		        %Title
 \def\thesishandin{09-June}                          %Submission date (Day-Month}
 \def\thesisdegree{B.Eng}                            %Degree ('B.Eng', 'B.Sc.', 'M.Sc.' or 'PhD')
 \def\thesisyear{2014}                               %Submission year
@@ -83,7 +83,7 @@
 \mainmatter
 \include{ChapterIntroduction}						%Chapter Introduction
 \include{Chapter1}                                  %Chapter 1
-%\include{Chapter2}                                 %Chapter 2
+\include{Chapter2}                                 %Chapter 2
 \appendix
 \include{Appendix1}                                 %Appendix A
 %-----------
