--- a/Chapter1.tex
+++ b/Chapter1.tex
@@ -1,4 +1,10 @@
-\chapter{General About Terms and Rules}
+\chapter{General - Terms and Rules}
+In the thesis a lot of terms is being used. This in concurrence with the Danish copyright laws.
+\begin{itemize}
+\item \textbf{Article:} For this thesis, a digital document containing the contents of a piece of news. Could originate from papers, magazines, TV or other forms of media.
+\item \textbf{Corpus:} From Latin meaning \textit{body}. Describes the test set of articles being used a test set for this thesis.
+\item \textbf{Term:} Basically a word. A term will be something that can be searched for.
+\end{itemize}
 
 blah about what words and terms is being used in the thesis
 
