--- a/Todo.tex
+++ b/Todo.tex
@@ -1,6 +1,8 @@
 TODO:
 
+Data preprocessing:
 Write about normalizing data (remove æ ø å, or change them to a o a) lower casing, removing extra white spaces ect.
+Cosine algorithm lower cases text, but does not remove special characters, my LCS uses the same text.
 
 Talk about comparison scores
 
