--- a/Thesis.tex
+++ b/Thesis.tex
@@ -83,7 +83,8 @@
 \mainmatter
 \include{ChapterIntroduction}						%Chapter Introduction
 \include{Chapter1}                                  %Chapter 1
-\include{Chapter2}                                 %Chapter 2
+\include{Chapter2} 
+\include{Chapter3}                                %Chapter 2
 \appendix
 \include{Appendix1}                                 %Appendix A
 %-----------
