Major update to the report
new chapter, new content.

--- a/Chapter2.tex
+++ b/Chapter2.tex
@@ -1,11 +1,11 @@
 \chapter{General - Terms and Rules}
-In the thesis a lot of terms is being used. This in concurrence with the Danish copyright laws.
+As there is a lot of terms used in this thesis, a short introduction to the most used are in order.
 \begin{itemize}
-\item \textbf{Article:} For this thesis, a digital document containing the contents of a piece of news. Could originate from papers, magazines, TV or other forms of media.
-\item \textbf{Corpus:} From Latin meaning \textit{body}. Describes the test set of articles being used a test set for this thesis.
+\item \textbf{Article:} For this thesis, a digital document containing the contents of a piece of news. Could originate from papers, magazines, TV or other forms of media. For this thesis a document corresponds to an article. Articles are in their electronic form stored at Infomedia as XML files, I will throughout this thesis only deal with the part of the XML files that contains data of value to me in this assignment. This being \textit{Tags} (see below), \textit{Headline}, \textit{Sub headline} and \textit{Article Text}.
+\item \textbf{Corpus:} From Latin meaning \textit{body}. In this thesis that describes the test set of articles being used a test set throughout my thesis.
+\item \textbf{Tag:} Used in Ontology\footnote{\url{http://en.wikipedia.org/wiki/Ontology_(information_science)}} to create words that describes the contents of an article.
 \item \textbf{Term:} Basically a word. A term will be something that can be searched for.
 \end{itemize}
 
-blah about what words and terms is being used in the thesis
-
+Hvornår er en artikel et duplikat (korte artikler (breaking news), hvornår er to artikler "tilstrækkeligt" forskellige?)
 blah about copyright rules in Denmark...
