--- a/Preface.tex
+++ b/Preface.tex
@@ -4,6 +4,8 @@ This thesis was prepared at the department of Informatics and Mathematical Model
 requirements for acquiring an B.Eng. in Informatics. \\
 The project is equal to 20 ECTS points.
 
+\textbf{This thesis is protected by confidentiality. No information from this thesis can be handed off to any party without signed permission.}
+
 The thesis deals with the issue of finding articles that are duplicates in a large corpus of articles. This is done using various algorithms and is implemented in C\#.
 
 The thesis consists of ...
