--- a/SummaryDK.tex
+++ b/SummaryDK.tex
@@ -1,6 +1,6 @@
 \chapter{Summary (Danish)}
 \begin{otherlanguage}{danish}
 
-Målet for denne afhandling er at lave noget forskelligt
+Målet for denne afhandling er at dokumentere mit arbejde med at finde artikel duplikater, i et større artikel corpus, ved brug af algoritmer.
 
 \end{otherlanguage}
