--- a/SummaryUK.tex
+++ b/SummaryUK.tex
@@ -1,3 +1,3 @@
 \chapter{Summary (English)}
 
-The goal of the thesis is to - snaps
+The goal of this thesis is create is to document my work with implementing a working prototype of using algorithms to find article duplicates in a large corpus of articles.
