--- a/Thesis.tex
+++ b/Thesis.tex
@@ -23,6 +23,7 @@
 % PACKAGES
 %==================================================================================================
 \usepackage{LukeThesis}                             %Import Thesis base style
+\usepackage{hyperref}
 %input{PhDMacros}                                   %Thesis specific macros
 %
 %==================================================================================================
@@ -81,10 +82,9 @@
 % Main content
 %-------------
 \mainmatter
-\include{ChapterIntroduction}						%Chapter Introduction
-\include{Chapter1}                                  %Chapter 1
+\include{ChapterIntroduction}						%Chapter Introduction                             
 \include{Chapter2} 
-\include{Chapter3}                                %Chapter 2
+\include{Chapter3}                               	%Chapter 2
 \appendix
 \include{Appendix1}                                 %Appendix A
 %-----------
