--- a/Chapter3.tex
+++ b/Chapter3.tex
@@ -53,6 +53,15 @@ Another way of finding duplicates is by looking at each articles semaphore tags.
 \subsection{Cons to Semaphore}
 As these tags are more a general indicator to an articles contents than an actual text matching algorithm, it will provide very little value as a stand alone implementation. Each article will only contain tags for the terms worth of note. If 100 articles all contained various doings of a minister (picking up the children, going to meetings, being involved in a crisis) many of the same tags would be present in the 100 articles, this could be the ministers name, political party and other general tags that are linked to this minister. It would therefore be hard to decipher much information that could truly and uniquely link two article together just by doing this.However this could be used to enhance another algorithm (for instance one of the two mentioned above). I will therefore not look any further into implementing this algorithm in this thesis.
 
+Belowthis should be a picture!
+\begin{figure}[hb]
+	\centering
+	\includegraphics[scale=1.0]{figures/JV-Lemvig}
+	\caption{TEXT!}
+\end{figure}
+
+
+
 
 
 
