--- a/Appendix1.tex
+++ b/Appendix1.tex
@@ -5,4 +5,5 @@ This appendix is full of stuff ... add more
 Document from Infomedia about the general Vector Spaced Search.\\
 Thesis document from Inge\\
 Links to Wikipedia\\
-The algorithm course book..
+The algorithm course book..\\
+Example XML document (article) - to show what the XML documents look like.
