--- a/Chapter1.tex
+++ b/Chapter1.tex
@@ -3,9 +3,12 @@ In the thesis a lot of terms is being used. This in concurrence with the Danish 
 \begin{itemize}
 \item \textbf{Article:} For this thesis, a digital document containing the contents of a piece of news. Could originate from papers, magazines, TV or other forms of media.
 \item \textbf{Corpus:} From Latin meaning \textit{body}. Describes the test set of articles being used a test set for this thesis.
-\item \textbf{Term:} Basically a word. A term will be something that can be searched for.
+\item \textbf{Term:} Basically a word. A term will be something that can be searched for in the article texts.
 \end{itemize}
+
+When Infomedia receives an article it is in XML format \footnote{Insert XML document example in appendix!!}.
+The XML contains a lot of meta data, for this thesis how ever, we will only focus on the article text. The article text is stored in several fields of the XML document. For use in the text matching we look at the contents of the \textit{hl1, hl2} and \textit{p} nodes. These contains the headline, the subheadline and the paragraph text of the article.
 
 blah about what words and terms is being used in the thesis
 
-blah about copyright rules in Denmark...
+blah about copyright rules in Denmark... \textit{citat loven!}
