--- a/ChapterIntroduction.tex
+++ b/ChapterIntroduction.tex
@@ -1,5 +1,5 @@
 \chapter{Introduction}
-I have been working for Infomedia\footnote{\url{www.infomedia.dk}} since my third semester at DTU, studying as an IT engineer (BSc) at DTU (march 2012). Infomedia is in \underline{short} a company that deals with news monitoring.
+I have been working for Infomedia\footnote{\url{www.infomedia.dk}} since my fourth semester at DTU (march 2012), while studying as an IT engineer (B.Eng.). Infomedia is in \underline{short} a company that deals with news monitoring.
 
 Infomedia is the result of a fusion between Berlingske Avisdata and Polinfo in 2002, which means that Infomedia is partly owned by JP/Politikens Hus\footnote{\url{www.jppol.dk}} and Berlingske Media\footnote{\url{www.berlingskemedia.dk}}. It is a company with around 130 employees, of which a fair amount is student aides like myself. Infomedia has various departments, which includes an economy, sales, analysis and an IT department amongst others.\\
 I am employed in the IT department as a student programmer.
@@ -10,4 +10,4 @@ One of the things that Infomedia tries to do, is that we want to present our cli
 
 Another issue, is the issue of copyrights and when the same article will appear in different media, but without content given from the author of that article. An example that is often happening is that news telegrams from Reuters\footnote{\url{www.reuters.com}} or Ritzau\footnote{\url{www.ritzau.dk}} is published in a newspaper, but without the source indication. All news media are of course interested in knowing when their material is being published in competing media. This how ever can be tricky business, as official rules on the matter is incredible fuzzy.
 
-I will in this thesis try and look into various ways of identifying article duplicates within a test corpus\footnote{A days worth of articles from 10/31/2013 - totalling 22.787 articles.} of articles. The long term goal for Infomedia is having this being implemented in the inflow of articles, and having a look back functionality so that we can group duplicates not just for one day, but for a longer period of time. 
+I will in this thesis try and look into various ways of identifying article duplicates within a test corpus\footnote{A days worth of articles from 10/31/2013 - totalling 22.787 articles.} of articles, by using algorithms. The long term goal for Infomedia is having this being implemented in the inflow of articles, and having a look back functionality so that we can group duplicates not just for one day, but for a longer period of time. 
