--- a/Thesis.tex
+++ b/Thesis.tex
@@ -36,7 +36,7 @@
 \def\thesisyear{2014}                               %Submission year
 \def\thesisnumber{????}                                 %DTU-IMM Serial number (do not include year)
 \def\thesisISSN{0000-0000}                          %ISSN number
-\def\thesiskeywords{Keywords are, comma separated}  %PDF keywords
+\def\thesiskeywords{Article Duplicates}  %PDF keywords
 \derivethesisprops                                  %Derive dependent properties
 %
 %==================================================================================================
@@ -85,7 +85,6 @@
 \include{ChapterIntroduction}						%Chapter Introduction                             
 \include{Chapter2} 									%Chapter 2
 \include{Chapter3}                               	%Chapter 3
-\include{Chapter4}									%Chapter 4
 \appendix	
 \include{Appendix1}                                 %Appendix A
 %-----------
